<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="horizontal"
  tools:parentTag="android.widget.LinearLayout">

  <com.base.mvvm.common.view.widget.BottomTabView
    android:id="@+id/buttomBarNote"
    android:layout_width="0dp"
    android:layout_height="?android:actionBarSize"
    android:layout_weight="1"
    android:duplicateParentState="true"
    android:gravity="center"
    app:icon_drawable="@drawable/icon_note"
    app:tab_name="@string/note"
    app:tab_text_color="@color/selector_tab_color" />

  <com.base.mvvm.common.view.widget.BottomTabView
      android:id="@+id/bottomBarEvents"
    android:layout_width="0dp"
    android:layout_height="?android:actionBarSize"
    android:layout_weight="1"
    android:duplicateParentState="true"
    android:gravity="center"
    app:icon_drawable="@drawable/icon_diary"
    app:tab_name="@string/diary"
    app:tab_text_color="@color/selector_tab_color" />

  <com.base.mvvm.common.view.widget.BottomTabView
      android:id="@+id/bottomBarCreateEvent"
    android:layout_width="0dp"
    android:layout_height="?android:actionBarSize"
    android:layout_weight="1"
    android:duplicateParentState="true"
    android:gravity="center"
    app:icon_drawable="@drawable/icon_history"
    app:tab_name="@string/history"
    app:tab_text_color="@color/selector_tab_color" />

  <com.base.mvvm.common.view.widget.BottomTabView
      android:id="@+id/bottomBarCalendar"
    android:layout_width="0dp"
    android:layout_height="?android:actionBarSize"
    android:layout_weight="1"
    android:duplicateParentState="true"
    android:gravity="center"
    app:icon_drawable="@drawable/icon_report"
    app:tab_name="@string/report"
    app:tab_text_color="@color/selector_tab_color" />

  <com.base.mvvm.common.view.widget.BottomTabView
      android:id="@+id/bottomBarMyPage"
    android:layout_width="0dp"
    android:layout_height="?android:actionBarSize"
    android:layout_weight="1"
    android:duplicateParentState="true"
    android:gravity="center"
    app:icon_drawable="@drawable/icon_list_user"
    app:tab_name="@string/list_user"
    app:tab_text_color="@color/selector_tab_color" />

</merge>
